# python-ml-tutorials-marimo

./: README.md  pyproject.toml
.github/workflows/: deploy.yml
apps/: optimizers.py  ridge_regression_tutorial.py
templates/: tailwind.html.j2
