[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "ml_tutorials_marimo"
version = "0.1.0"
description = "ML tutorials with marimo"
authors = ["Brian Staber <brian.staber@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
marimo = "^0.14.10"
mkdocs-material = "^9.6.15"
pymdown-extensions = "^10.16"
matplotlib = "^3.10.3"
numpy = "^2.3.1"
plotly = "^6.2.0"
pandas = "^2.3.0"
ruff = "^0.12.2"
htmlmin2 = ">=0.1.13,<0.2"